test/features/errors/semantic/e1045_invalid_field_assign.spl
# E1045: Invalid Field Assignment

Feature: E1045 - Cannot Assign to Non-Field Expression
  As a Simple compiler
  I want to detect assignments to non-field expressions
  So that only struct fields can be assigned using field syntax

  Background:
    Given I have the Simple compiler

  Scenario: Assigning to method call
    When I compile:
      '''
      struct Point:
        x: i32

      impl Point:
        fn get_x() -> i32:
          self.x

      fn test():
        var p = Point { x: 0 }
        p.get_x() = 10  # Error: not a field
      '''
    Then I should see error E1045
    And the error message should be "cannot assign to non-field expression"
    And the label should indicate "not a field"
    And the help should suggest "only struct fields can be assigned this way"

  Scenario: Valid field assignment
    When I compile:
      '''
      struct Point:
        x: i32

      fn test():
        var p = Point { x: 0 }
        p.x = 10  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        var p = Point { x: 0 }
        p.method() = 10
      '''
    Then I should see error E1045
    And the error message should contain "잘못된 필드 할당"
